clusters/kind_ovh/infra/auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: id
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /keycloak/$2
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "id.${hostname}"
    secretName: keycloak-tls
  rules:
  - host: "id.${hostname}"
    http:
      path: /keycloak(/|$)(.*)
      pathType: Prefix
      backend:
        service:
          name: keycloakx-http
          port:
            number: 80
